--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
-  "lerna": "2.2.0",
+  "$schema": "https://json.schemastore.org/lerna.json",
   "npmClient": "yarn",
-  "useWorkspaces": true,
   "version": "1.40.0",
   "command": {
     "run": {
@@ -10,8 +9,9 @@
     "publish": {
       "forcePublish": true,
       "graphType": "all",
-      "skipGit": true,
-      "registry": "https://registry.npmjs.org/"
+      "registry": "https://registry.npmjs.org/",
+      "push": false,
+      "gitTagVersion": false
     }
   }
 }
